--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- header start  -->
-    <header>
+    <header id="header">
       <div class="container">
         <div class="flex">
           <div class="logo">
